feat: banner section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Estilos -->
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="stylesheet" type="text/css" href="./css/header.css">	
-	<link rel="stylesheet" type="text/css" href="./css/sidebar.css">	
+	<link rel="stylesheet" type="text/css" href="./css/home.css">	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
 	</header>
 
 
-	<nav class="sidebar active" sidebar>
+	<nav class="sidebar" sidebar>
 		<div class="sidebar__inner">
 
 			<div class="sidebar__list">
@@ -86,6 +86,174 @@
 	</nav>
 
 	<div class="overlay" overlay menu-toggler></div>
+
+	<article class="container" page-content>
+		
+		<section class="banner" aria-label="Populares">
+
+				<div class="banner__slider">
+
+					<div class="slider-item active" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="slider-item" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="slider-item" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="slider-item" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="slider-item" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="slider-item" slider-item>
+						<img src="./imgs/slider-banner.jpg" alt="Gato con botas: El último deseo" class="img-cover" loading="eager">
+
+						<div class="banner__content">
+							<h2 class="title-content">Gato con botas: El último deseo</h2>
+
+							<div class="meta-list">
+								<div class="meta-item">2022</div>
+								<div class="meta-item assessment">7.5</div>
+								<p class="genre">Acción, Aventura</p>
+								<p class="text-description">
+									El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
+								</p>
+								<a href="./details.html" class="details-btn">
+									<img src="./imgs/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+									<span class="span">Ver trailer</span>
+								</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+				<div class="banner__slider-control">
+					<div class="control-inner">
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+
+						<button class="poster-box slider-item active">
+							<img src="./imgs/slider-control.jpg" alt="Slide Gato con botas: El último deseo" loading="lazy" draggable="false">
+						</button>
+					</div>
+				</div>
+
+
+		</section>
+
+	</article>
 
 </body>
 </html>
